--- a/public/index.ejs
+++ b/public/index.ejs
@@ -9,6 +9,6 @@
   </head>
   <body>
     <div data-js="app"></div>
-    <script type="text/javascript" src="js/scripts.min.js"></script>
+    <script type="text/javascript" src="/js/scripts.min.js"></script>
   </body>
 </html>
